# monocular-slam-navigation

./: .gitignore  README.md
data/: MapPoints.txt  MarkerPositions.txt  calibration.json  picam_runtime.yaml
docs/: SPIN_PROTOCOL.md
monitoring/: .gitignore  docker-compose.yml
monitoring/anomaly/: detector.py
monitoring/dashboard/backend/: main.py
monitoring/dashboard/frontend/: .babelrc  App.html  App.js  App.jsx  index.html  package-lock.json  package.json
monitoring/influx/: writer.py
monitoring/mock/: inject.py  simulator.py  stress_test.py  stress_test_report.txt
navigation/: README.md  navigator.py  stations.json
navigation/tools/: align_to_object.py  anchor.py  calibrate.py  calibrate_cli.py  map.py  path_finding.py  spin_debug.py  test_imu_live.py  test_imu_nav.py  test_min_speed.py  test_transform_live.py  test_transform_static.py
navigation/web/: index.html  server.py
pi/: README.md  camera_zmq.py  car.py  imu_zmq.py
slam/: CHANGES.md  CMakeLists.txt  README.md  bridge.py  map_builder.py  map_viewer.py  slam_reader.cc  slam_zmq.py
slam/test_map/: map.pgm  map.yaml
